--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <p>우리의 목숨을 위협하는 존재들</p>
     <hr>
     <A href = "https://cws-2020-test.s3.ap-northeast-2.amazonaws.com/signup.html" target = "blank" class="signup" > < Sign Up > </A><!-- s3로 배포-->
-    <A href = "https://7o7lz77tef.execute-api.us-east-1.amazonaws.com/default/introduce" target = "blank" class="introduce" > < Introduce ></Introduce> </A><!-- Lambda, API Gateway로 배포-->
-    <hr>
+    <A href = "https://7o7lz77tef.execute-api.us-east-1.amazonaws.com/default/introduce" target = "blank" class="introduce" > < Introduce > </A><!-- Lambda, API Gateway로 배포-->
+     <hr>
     <div>
         <div class="left">
             <img id="" src="https://cws-2020-test.s3.ap-northeast-2.amazonaws.com/finedust.jpg" class = "image"></img>	
@@ -44,6 +44,8 @@
             <input type="text" id="name3" placeholder="측정소 이름">
             <button class="button" onclick="measuringstation_list2(name3.value)">검색</button>
             <p>입력 예시 : 혜화동  (읍면동명)</p>
+            <A href = "https://4ift7etml8.execute-api.ap-northeast-2.amazonaws.com/default/measuringstation" target = "blank" class="measuringstation" > < 서울시 미세먼지 측정소 전체 리스트 > </A><!-- Lambda, API Gateway로 배포-->
+   
         </div>
     </div>
 
